--- a/css/main.css
+++ b/css/main.css
@@ -10,14 +10,23 @@ body {
     font-family: var(--font-text);
 }
 
-h1, h2, h3, h4, h5, h6,navbar-brand {
+h1, h2, h3, h4, h5, h6, navbar-brand {
     font-family: var(--font-titles);
 }
+
 .nav-link {
     font-family: var(--font-titles);
-    color:#000;
+    color: #000;
     font-weight: bold;
 }
-#analitycs{
+
+#analitycs {
     background-color: floralwhite;
+}
+
+#vida_digital {
+    background-color: ghostwhite;
+}
+.cyt{
+
 }
