--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,9 @@
     --font-text: 'Nunito Sans', sans-serif;
     --primary-color: #CA2400;
 }
+.color-primary {
+    color: var(--primary-color);
+}
 
 body {
     font-family: var(--font-text);
@@ -98,4 +101,14 @@ h1, h2, h3, h4, h5, h6, .navbar-brand {
     -webkit-box-shadow: -1px 1px 5px 2px rgba(202, 36, 0, 0.67);
     -moz-box-shadow: -1px 1px 5px 2px rgba(202, 36, 0, 0.67);
     box-shadow: -1px 1px 5px 2px rgba(202, 36, 0, 0.67);
+}
+.breadcrumb-item{
+    font-family: var(--font-titles);
+}
+.breadcrumb-item a{
+    color: #999;
+    text-decoration: none;
+}
+.breadcrumb-item a:hover, .breadcrumb-item a:focus {
+    text-decoration: underline;
 }
