--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,principal0;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,principal0;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,principal0;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body{
     font-family: 'Roboto Flex', sans-serif;
 }
