pagiande about y nuevas secciones home

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,6 @@
 		<a href="/blog" class="underline blog-link" title="blog">Blog</a>
 		<a href="https://www.linkedin.com/newsletters/7226589723593498624/"
 		   class="underline newsletter-link" title="newsletter">newsletter</a>
-		<a href="/#contact" class="underline contact-link" title="contact">Contacto</a>
+		<a href="/about" class="underline contact-link" title="about">Sobre mi</a>
 	</header>
 </div>
