--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,7 +5,6 @@ import Footer from '../../components/Footer.astro';
 import {SITE_TITLE} from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
-import {Github, Linkedin, Mail} from "@lucide/astro";
 import PreFooter from "../../components/PreFooter.astro";
 
 const posts = (await getCollection('blog')).sort(
@@ -13,12 +12,22 @@ const posts = (await getCollection('blog')).sort(
 );
 const latestPosts = posts.slice(0, 5);
 
-let blogPostSchema = latestPosts.map((post) => ({
-	"@type": "BlogPosting",
-	"headline": post.data.title,
-	"url": `https://marcmayol.com/blog/${post.slug}`,
-	"datePublished": post.data.pubDate.toISOString()
-}));
+// let blogPostSchema = latestPosts.map((post) => ({
+// 	"@type": "BlogPosting",
+// 	"headline": post.data.title,
+// 	"url": `https://marcmayol.com/blog/${post.slug}`,
+// 	"datePublished": post.data.pubDate.toISOString()
+// }));
+const item ={
+	"@context": "https://schema.org",
+	"@type": "Person",
+	"name": "Marc Mayol | Blog",
+	"publisher": {
+		"@type": "Person",
+		"name": "Marc Mayol Orell",
+		"url": "https://marcmayol.com/about"
+	}
+}
 ---
 
 <!doctype html>
@@ -26,17 +35,7 @@ let blogPostSchema = latestPosts.map((post) => ({
 	<head>
 		<BaseHead title={SITE_TITLE + " | Blog"}
 				  description="Blog donde comparto conocimientos sobre IA Generativa, productos de Google y desarrollo de inteligencia artificial"
-				  item={{
-					  "@context": "https://schema.org",
-					  "@type": "Person",
-					  "name": "Marc Mayol | Blog",
-					  "publisher": {
-						  "@type": "Person",
-						  "name": "Marc Mayol Orell",
-						  "url": "https://marcmayol.com/about"
-					  },
-					  "blogPost": {blogPostSchema}
-				  }}/>
+				  item={item}/>
 	</head>
 	<body>
 		<Header />
