--- a/src/pages/blog/en/index.astro
+++ b/src/pages/blog/en/index.astro
@@ -1,27 +1,23 @@
 ---
-import BaseHead from '../../components/BaseHead.astro';
-import Header from '../../components/Header.astro';
-import Footer from '../../components/Footer.astro';
-import {SITE_TITLE} from '../../consts';
+import BaseHead from '../../../components/BaseHead.astro';
+import Header from '../../../components/Header.astro';
+import Footer from '../../../components/Footer.astro';
+import {SITE_TITLE} from '../../../consts';
 import { getCollection } from 'astro:content';
-import FormattedDate from '../../components/FormattedDate.astro';
-import PreFooter from "../../components/PreFooter.astro";
+import FormattedDate from '../../../components/FormattedDate.astro';
+import PreFooter from "../../../components/PreFooter.astro";
 
-const posts = (await getCollection('blog')).sort(
+import { getLangFromUrl, useTranslations } from '../../../i18n/utils';
+const lang = getLangFromUrl(Astro.url);
+const posts = (await getCollection('blog')).filter(post => post.id.startsWith(`${lang}/`)).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
-const latestPosts = posts.slice(0, 5);
 
-// let blogPostSchema = latestPosts.map((post) => ({
-// 	"@type": "BlogPosting",
-// 	"headline": post.data.title,
-// 	"url": `https://marcmayol.com/blog/${post.slug}`,
-// 	"datePublished": post.data.pubDate.toISOString()
-// }));
+const t = useTranslations(lang);
 const item ={
 	"@context": "https://schema.org",
 	"@type": "Person",
-	"name": "Marc Mayol | Blog",
+	"name": t('about.seotitle'),
 	"publisher": {
 		"@type": "Person",
 		"name": "Marc Mayol Orell",
@@ -33,8 +29,8 @@ const item ={
 <!doctype html>
 <html lang="es">
 	<head>
-		<BaseHead title={SITE_TITLE + " | Blog"}
-				  description="Blog donde comparto conocimientos sobre IA Generativa, productos de Google y desarrollo de inteligencia artificial"
+		<BaseHead title={t('about.seotitle')}
+				  description={t('about.seodescription')}
 				  item={item}/>
 	</head>
 	<body>
@@ -47,24 +43,17 @@ const item ={
 					alt="Marc Mayol"
 					class="block mx-auto mb-4 w-35 h-50 rounded-full"
 				/>
-				<h1 class="text-5xl font-bold mb-4 tracking-tight">Marc Mayol</h1>
-				<h2 class="text-2xl text-gray-500 mb-8">Gen AI Developer & Researcher</h2>
+				<h1 class="text-5xl font-bold mb-4 tracking-tight">{t("about.title")}</h1>
+				<h2 class="text-2xl text-gray-500 mb-8">{t("about.subtitle")}</h2>
 				<p class="text-xl leading-relaxed text-gray-700 max-w-2xl mx-auto">
-					¡Hola! Soy Marc, Tech Lead especializado en <strong>Inteligencia Artificial
-					Generativa</strong> y un entusiasta apasionado de este fascinante mundo. Con experiencia en el
-					desarrollo de
-					aplicaciones de <strong>inteligencia artificial</strong>, me esfuerzo por crear sistemas
-					inteligentes que puedan tener un impacto positivo en nuestro mundo.
-				</p>
-				<p class="text-xl leading-relaxed text-gray-700 max-w-2xl mx-auto">
-					En este blog comparto conocimientos sobre <strong>IA Generativa productos de Google y desarrollo de
-					inteligencia artificial</strong>. ¡Espero que disfrutes de la lectura!
+					{t("about.description")}
 				</p>
 			</section>
 			<div class="max-w-7xl mx-auto px-4 py-8">
 				<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
 					{
 						posts.map((post) => (
+
 							<div>
 								<a href={`/blog/${post.id}/`} class="block group">
 									<img
