--- a/src/components/PreFooter.astro
+++ b/src/components/PreFooter.astro
@@ -1,12 +1,15 @@
 ---
 import {Github, Linkedin, Mail} from "@lucide/astro";
+import { getLangFromUrl, useTranslations } from '../i18n/utils';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 <section>
     <section id="contact" class="mb-24 mt-10 text-center">
-        <h2 class="text-3xl font-semibold mb-6">Ponte en contacto</h2>
+        <h2 class="text-3xl font-semibold mb-6">{t('home.contacttitle')}</h2>
         <p class="mb-8 text-xl text-gray-700">
-            ¿Interesado en colaborar o en que participe como ponente en tu evento? ¡No dudes en
-            contactarme!
+            {t('home.contactdescription')}
         </p>
         <div class="flex justify-center flex-wrap gap-4 mt-6">
             {[
@@ -41,6 +44,7 @@ import {Github, Linkedin, Mail} from "@lucide/astro";
                             target="_blank"
                             rel="noopener noreferrer"
                             class={`inline-flex items-center px-5 py-2 ${item.bgColor} ${item.textColor} ${item.ringColor} rounded-full shadow-sm hover:opacity-90 transition`}
+                            title={item.label}
                     >
                         <item.icon class="mr-2 h-5 w-5" />
                         {item.label}
