--- a/src/pages/blog/es/index.astro
+++ b/src/pages/blog/es/index.astro
@@ -27,7 +27,7 @@ const item ={
 ---
 
 <!doctype html>
-<html lang="es">
+<html lang="es">a
 	<head>
 		<BaseHead title={t('about.seotitle')}
 				  description={t('about.seodescription')}
